2011-05-11  Paul Eggert  <eggert@cs.ucla.edu>

	* xterm.c: Use EMACS_INT for Emacs modifiers, and int for X modifiers.
	Before, the code was not consistent.  These values cannot exceed
	2**31 - 1 so there's no need to make them unsigned.
	(x_x_to_emacs_modifiers): Accept int and return EMACS_INT.
	(x_emacs_to_x_modifiers): Accept EMACS_INT and return int.
	(x_x_to_emacs_modifiers, x_emacs_to_x_modifiers): Reject non-integers
	as modifiers.
	* xterm.h (x_x_to_emacs_modifiers): Adjust to signature change.

	* lisp.h (XINT) [USE_LISP_UNION_TYPE]: Cast to EMACS_INT.
	(XUINT) [USE_LISP_UNION_TYPE]: Cast to EMACS_UINT.
	Otherwise, GCC 4.6.0 warns about printf (pI, XINT (...)),
	presumably because the widths might not match.

	* window.c (size_window): Avoid needless test at loop start.

2011-05-10  Juanma Barranquero  <lekktu@gmail.com>

	* image.c (Finit_image_library): Return t for built-in image types,
	like pbm and xbm.  (Bug#8640)

2011-05-09  Andreas Schwab  <schwab@linux-m68k.org>

	* w32menu.c (set_frame_menubar): Fix submenu allocation.

2011-05-07  Eli Zaretskii  <eliz@gnu.org>

	* w32console.c (Fset_screen_color): Doc fix.
	(Fget_screen_color): New function.
	(syms_of_ntterm): Defsubr it.

	* callproc.c (call_process_cleanup): Don't close and unlink the
	temporary file if Fcall_process didn't create it in the first
	place.
	(Fcall_process): Don't create tempfile if stdout of the child
	process will be redirected to a file specified with `:file'.
	Don't try to re-open tempfile in that case, and set fd[0] to -1 as
	cue to call_process_cleanup not to close that handle.

2011-05-07  Ben Key  <bkey76@gmail.com>

	* makefile.w32-in: The bootstrap-temacs rule now makes use of
	one of two shell specific rules, either bootstrap-temacs-CMD or
	bootstrap-temacs-SH.  The bootstrap-temacs-SH rule is identical
	to the previous implementation of the bootstrap-temacs rule.
	The bootstrap-temacs-CMD rule is similar to the previous