@@ -922,7 +922,7 @@ set_frame_menubar (FRAME_PTR f, int first_time, int deep_p)
 #endif
   Lisp_Object items;
   widget_value *wv, *first_wv, *prev_wv = 0;
-  EMACS_UINT i, last_i = 0;
+  EMACS_UINT i, last_i;
   int *submenu_start, *submenu_end;
   int *submenu_top_level_items, *submenu_n_panes;
 
@@ -1021,8 +1021,6 @@ set_frame_menubar (FRAME_PTR f, int first_time, int deep_p)
 	{
 	  Lisp_Object key, string, maps;
 
-	  last_i = i;
-
 	  key = XVECTOR (items)->contents[4 * i];
 	  string = XVECTOR (items)->contents[4 * i + 1];
 	  maps = XVECTOR (items)->contents[4 * i + 2];
@@ -1039,6 +1037,7 @@ set_frame_menubar (FRAME_PTR f, int first_time, int deep_p)
 	  submenu_end[i] = menu_items_used;
 	}
 
+      last_i = i;
       finish_menu_items ();
 
       /* Convert menu_items into widget_value trees
