@@ -1,3 +1,7 @@
+2011-05-12  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* xmenu.c (set_frame_menubar): Don't mishandle vectors with no nils.
+
 2011-05-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* xterm.c: Use EMACS_INT for Emacs modifiers, and int for X modifiers.
